# surf_analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: pose-engines.md
docs/tutorials/: custom-segment-weights.md  pose-biomechanics-tutorial.md
plans/: 2026-05-26-surfing-analysis-design.md  2026-05-26-surfing-analysis-plan.md  2026-06-15-wave-analysis-design.md  2026-06-16-wave-analysis-plan.md  2026-06-21-physical-wave-height-design.md  2026-06-21-physical-wave-height-plan.md  golang-replacement.md  video_format_decision.md
sample/: sample.json
skills/ffmpeg/: SKILL.md
src/surfanalysis/: __init__.py  cli.py
src/surfanalysis/extraction/: __init__.py  analyzer.py  engine.py  exceptions.py  landmarks.py  mediapipe_engine.py  schema.py
src/surfanalysis/extraction/wave/: __init__.py  base.py  camera.py  horizon.py  ocean.py  (+5 more)
src/surfanalysis/metrics/: __init__.py  angles.py  com.py  geometry.py  stability.py  wave_geometry.py  weight_dist.py
src/surfanalysis/rendering/: __init__.py  overlay.py  skeleton.py  wave_overlay.py  writer.py
tests/: __init__.py  test_analyzer.py  test_angles.py  test_cli_extract.py  test_cli_render.py  test_com.py  test_compute_frame.py  test_e2e.py  test_engine.py  test_geometry.py  test_mediapipe_engine.py  test_overlay.py  test_schema.py  test_skeleton.py  test_stability.py  test_wave_base.py  test_wave_camera.py  test_wave_engines.py  test_wave_geometry.py  test_wave_horizon.py  test_wave_motion.py  test_wave_overlay.py  test_wave_physical.py  test_wave_prescan.py  test_wave_region.py  test_weight_dist.py  test_writer.py
